project completed and fixed overflow issues

--- a/src/input.css
+++ b/src/input.css
@@ -4,10 +4,6 @@
     --font-logo: "Bitcount Grid Double", system-ui; 
     --font-hero: "Bebas Neue", sans-serif;
 }
-@keyframes logoScroll {
-  0%   { transform: translateX(0); }
-  100% { transform: translateX(-50%); }
-}
-.animate-logoScroll{
-  animation: logoScroll 18s linear infinite;
+section {
+  scroll-margin-top: 75px;
 }
